added styling and slight refactoring

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <title>MIME Type Detection</title>
   <link rel="stylesheet" href="/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 
 </head>
 <body>
@@ -16,8 +17,11 @@
     <input type="submit" value="Verify">
   </form>
   <p id="mime-type"></p>
-  <p id="valid-type"></p>
-  <p id="error"></p>
+  <p id="message"></p>
+  <div id="footer">
+    <p id="footer-name">Yoni Slotwiner</p>
+    <img src="/assets/vimeo-logo.png">
+  </div>
   <script src="./upload.js"></script>
 </body>
 </html>
