added slight refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <title>MIME Type Detection</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 
 </head>
@@ -20,7 +20,7 @@
   <p id="message"></p>
   <div id="footer">
     <p id="footer-name">Yoni Slotwiner</p>
-    <img src="/assets/vimeo-logo.png">
+    <img src="./assets/vimeo-logo.png">
   </div>
   <script src="./upload.js"></script>
 </body>
