added some styling changes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 <body>
   <h1>MIME Type Detection</h1>
   <form id="upload-form">
-    <label for="file">File</label>
-    <input id="file" type="file" name="file">
+    <!-- <label for="file">File</label> -->
+    <!-- <input id="file" type="file" name="file"> -->
+
+    <label id="file-upload-container">
+      <input id="file" type="file" name="file"/>
+    </label>
     <br><br>
-    <input type="submit" value="Verify">
+    <input id="verify" type="submit" value="Verify">
+
   </form>
   <p id="mime-type"></p>
   <p id="message"></p>
@@ -25,3 +30,5 @@
   <script src="./upload.js"></script>
 </body>
 </html>
+
+
