added separate mime-types file

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
 <body>
   <h1>MIME Type Detection</h1>
   <form id="upload-form">
-    <!-- <label for="file">File</label> -->
-    <!-- <input id="file" type="file" name="file"> -->
-
     <label id="file-upload-container">
       <input id="file" type="file" name="file"/>
     </label>
     <br><br>
     <input id="verify" type="submit" value="Verify">
-
   </form>
   <p id="mime-type"></p>
   <p id="message"></p>
@@ -27,6 +23,7 @@
     <p id="footer-name">Yoni Slotwiner</p>
     <img src="./assets/vimeo-logo.png">
   </div>
+  <script src="./mime-types.js"></script>
   <script src="./upload.js"></script>
 </body>
 </html>
